--- a/05 - React Entendendo como a biblioteca funciona/ceep/src/assets/index.css
+++ b/05 - React Entendendo como a biblioteca funciona/ceep/src/assets/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700');
+
 html,
 body,
 div,
@@ -85,6 +87,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  font-family: 'Titillium Web', sans-serif
 }
 
 /* make sure to set some focus styles for accessibility */
