--- a/05 - React Entendendo como a biblioteca funciona/ceep/src/components/cardNota/style.css
+++ b/05 - React Entendendo como a biblioteca funciona/ceep/src/components/cardNota/style.css
@@ -4,7 +4,8 @@
     justify-content: space-between;
     background-color: var(--fundo-detalhes);
     border: solid 1px rgb(219, 219, 219);
-    border-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
     flex-wrap: wrap;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.09);
     padding: 16px;
@@ -17,13 +18,14 @@
   }
   
   .card-nota_texto {
-    margin-top: 8px;
+    margin-top: 1vh;
     font-size: 1em;
   }
   
   .card-nota_titulo {
     font-size: 1.2em;
     margin-right: 12px;
+    margin-top: -1vh;
     
   }
 
@@ -33,6 +35,16 @@
    size: 3vh;
    height: 30px;
    width: 30px;
-   margin-top: -15px;
-   margin-right: -10px;
+   margin-top: -1vh;
+   margin-right: -1vh;
+  }
+
+  .categoriaName{
+    color: rgb(224, 224, 224);
+    background-color: rgb(34, 43, 85);
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    text-align: center;
+    padding: 1vh;
+    font-weight: 500;
   }
